tests/sksl/errors/golden/Ossfuzz27663.glsl
### Compilation failed:

error: 1: division by zero
error: 1: type mismatch: '=' cannot operate on 'half4', 'float4'
2 errors
